fix image overflow

--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -10,10 +10,11 @@
 }
 
 .recently-played__images {
-    width: 150px;
-    height: 150px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #recently-played__each-song-container {
-    margin: 15px;
+    margin: 10px;
+    width: 100px;
 }
